<resources>
    <string name="app_name">MovieInfo HD+</string>
    <string name="poster_of_movie">Movie poster</string>
    <string name="top_rated">Top rated</string>
    <string name="add_to_favourite">Added to favourite</string>
    <string name="delete_from_favourite">Deleted from favourite</string>
    <string name="item_main">Main menu</string>
    <string name="item_favourite">Favourite</string>
    <string name="launch_trailer">Launch trailer</string>
    <string name="movie_title_lang">Title:</string>
    <string name="original_title_lang">Original title:</string>
    <string name="rating_lang">Rating:</string>
    <string name="release_date_lang">Release date:</string>
    <string name="description_lang">Description:</string>
    <string name="most_n_popular">Most popular</string>
    <string name="find_out">Greetings, here you can find out about me!</string>
    <string name="sur_nam">Ibragimov Diyorbek</string>
    <string name="developer_android">Android Developer</string>
    <string name="developer_info">Ibragimov Diyorbek</string>
    <string name="university_name">FB of TUIT</string>
    <string name="insta_name" translatable="false">diyorbek_ibragimov</string>
    <string name="telegram_name" translatable="false">diyorbek_ibragimov</string>
    <string name="term_paper">Term paper \n on the subject Database</string>
    <string name="about_developer_info">About developer</string>
</resources>
