<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeveloperActivity"
    android:background="#832A2A">

    <ImageView
        android:id="@+id/developer_ico_id"
        android:src="@drawable/developer_ico"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/developer_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_android"
        android:textColor="@color/white_colour"
        android:shadowColor="#000000"
        android:textSize="23sp"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        app:layout_constraintTop_toBottomOf="@id/developer_ico_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="11dp"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developer_android">

        <ImageView
            android:id="@+id/developer_ico"
            android:src="@drawable/name_ico"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="@id/constraint_2"
            app:layout_constraintBottom_toTopOf="@id/university_ico"
            app:layout_constraintStart_toStartOf="@id/constraint_2"/>

        <TextView
            android:id="@+id/developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_info"
            android:textColor="@color/white_colour"
            android:shadowColor="#000000"
            android:textSize="18sp"
            android:shadowRadius="2"
            android:shadowDx="3"
            android:shadowDy="3"
            app:layout_constraintBottom_toBottomOf="@id/developer_ico"
            app:layout_constraintStart_toEndOf="@id/developer_ico"
            app:layout_constraintTop_toTopOf="@+id/developer_ico" />

        <ImageView
            android:id="@+id/university_ico"
            android:src="@drawable/univer_ico"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/developer_ico"
            app:layout_constraintStart_toStartOf="@id/constraint_2"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/university_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/university_name"
            android:textColor="@color/white_colour"
            android:shadowColor="#000000"
            android:textSize="18sp"
            android:shadowRadius="2"
            android:shadowDx="3"
            android:shadowDy="3"
            android:layout_marginStart="7dp"
            app:layout_constraintBottom_toBottomOf="@id/university_ico"
            app:layout_constraintStart_toEndOf="@id/university_ico"
            app:layout_constraintTop_toTopOf="@+id/university_ico" />

        <ImageView
            android:id="@+id/gitHub_ico"
            android:src="@drawable/github_ico"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/university_ico"
            app:layout_constraintStart_toStartOf="@id/constraint_2"
            android:layout_marginStart="4dp"/>

        <TextView
            android:id="@+id/gitHub_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ibragimov96"
            android:textColor="@color/white_colour"
            android:shadowColor="#000000"
            android:textSize="18sp"
            android:shadowRadius="2"
            android:shadowDx="3"
            android:shadowDy="3"
            android:layout_marginStart="7dp"
            app:layout_constraintBottom_toBottomOf="@id/gitHub_ico"
            app:layout_constraintStart_toEndOf="@id/gitHub_ico"
            app:layout_constraintTop_toTopOf="@+id/gitHub_ico" />

        <ImageView
            android:id="@+id/insta_ico"
            android:src="@drawable/insta_ico"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/gitHub_ico"
            app:layout_constraintStart_toStartOf="@id/constraint_2"
            android:layout_marginStart="9dp"/>

        <TextView
            android:id="@+id/insta_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insta_name"
            android:textColor="@color/white_colour"
            android:shadowColor="#000000"
            android:textSize="18sp"
            android:shadowRadius="2"
            android:shadowDx="3"
            android:shadowDy="3"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/insta_ico"
            app:layout_constraintStart_toEndOf="@id/insta_ico"
            app:layout_constraintTop_toTopOf="@+id/insta_ico" />

        <ImageView
            android:id="@+id/telegram_ico"
            android:src="@drawable/telegram_ico"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/insta_ico"
            app:layout_constraintStart_toStartOf="@id/constraint_2"
            android:layout_marginStart="4dp"/>

        <TextView
            android:id="@+id/telegram_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telegram_name"
            android:textColor="@color/white_colour"
            android:shadowColor="#000000"
            android:textSize="18sp"
            android:shadowRadius="2"
            android:shadowDx="3"
            android:shadowDy="3"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/telegram_ico"
            app:layout_constraintStart_toEndOf="@id/telegram_ico"
            app:layout_constraintTop_toTopOf="@+id/telegram_ico" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/course_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_paper"
        android:textAlignment="center"
        android:textColor="@color/white_colour"
        android:shadowColor="#000000"
        android:textSize="18sp"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        app:layout_constraintTop_toBottomOf="@id/constraint_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>